# P.O.P_Main_Project

./: .gitignore  A_I.c  CMakeLists.txt  END_GAME.c  FindCloseFood.c  New Text Document.txt  README.md  attack.c  cd.c  deathblock.c  debug.c  end_of_game.c  game_console.h  headers.h  hide_cursor.c  initialization.c  keyboard_handle.c  load_config.c  load_configs.c  load_map.c  load_settings.c  main.c  main_menu.c  moveco.c  player_movement.c  print_map.c  put_dblock.c  queue.c  raindeath.c  random_gen.c  read save.c  run_game.c  save.config.c  show_pause_window.c  show_start_window.c  welcome screen.c
config_loader/: load_configs.c  load_map.c  load_settings.c
core_functions/: cd.c  cleanup.c
movement/: move_comp.c  move_player.c  player_movement.c
